styles.css
@import"https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap";
*,*:before,*:after {
    box-sizing: border-box;
    margin: 0;
    position: relative;
}
.image-container {
    width: 200px;
    height: 200px;
    margin: auto; /*Centers horizontally*/
    margin-bottom: 20px;
}
#clickableImage {
    width: 100%;
    height: 100%;
    transition: transform 0.3s, filter 0.3s; /* Smooth transition */
    filter: grayscale(100%); /* Convert image to grayscale */
}
#clickableImage:hover {
    transform: scale(1.1); /* Scale image by 10% on hover */
    filter: grayscale(0%); /* Remove grayscale filter on hover */
}
body {
    margin: 0;
    background-color: rgb(145, 108, 100);
    color: rgb(255, 215, 170);
    text-align: center;
    font-family: Patrick Hand,Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
    text-rendering: optimizeLegibility;
}
h1 a {
    color: inherit; /* Use the color of the parent element */
    text-decoration: underline transparent;
    transition: text-decoration 0.3s ease;
}
h1 a:hover {
    text-decoration: underline;
}
.card {
    border: 0px solid #ccc;
    border-radius: 0.8rem;
    padding: 2rem;
    padding-left: calc(2rem + 25px);
    padding-right: calc(2rem + 25px);
    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
    background-color: rgb(200, 160, 110);
    max-width: 40rem; /* Change max-width to adjust size */
    margin: 30px auto;
    height: auto;
}
@media screen and (max-width: calc(40rem + 30px) ) {
    .card {
        margin: 30px 15px;
    }
}
@media screen and (max-width: calc(35rem) ) {
    #subs, #views {
        float: none;
        text-align: center;
        width: 100%; /* Make the headings occupy full width */
    }
}
.card h2 {
    font-size: 3rem;
    color: rgb(92, 42, 36);
    margin-bottom: 10px;
}
.card p {
    font-size: 2rem;
    color: rgb(92, 42, 36);
    line-height: 1.5;
}
#subs {
    float: left;
}
#views {
    float: right;
}
.clearfix::after {
    content: "";
    display: table;
    clear: both;
}
.divider {
    position: absolute;
    top: 20;
    bottom: 20;
    left: 50%; /* Position the divider in the middle */
    width: 2px; /* Set the width of the divider */
    background-color: rgb(92, 42, 36); /* Choose the color of the divider */
    transform: translateX(-50%);  /*Center the divider horizontally */
}

